requirements.txt update for Python 2.7

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 Django==1.5.1
-Pillow==1.7.8
+Pillow
 South==0.7.6
 XlsxWriter==0.4.2
 pep8==1.4.6
 phonenumbers==5.7b2
-psycopg2==2.5.1
+psycopg2-binary
 pyPdf==1.13
 pyserial==2.6
-reportlab==2.7
-xhtml2pdf==0.0.5
+reportlab
+xhtml2pdf==0.2
+django-model-report
+django-tastypie==0.11.1
+django-phonenumber-field==0.2.1
